--- a/index.html
+++ b/index.html
@@ -21,8 +21,8 @@
 <body>
   <div class="container">
     <div class="product-preview">
-      <img src="./product-preview-card-component-main/images/image-product-mobile.jpg" class="pic-mob">
-      <img src="./product-preview-card-component-main/images/image-product-desktop.jpg" class="pic-desk">
+      <img src="/product-preview-card-component-main/images/image-product-mobile.jpg" class="pic-mob">
+      <img src="/product-preview-card-component-main/images/image-product-desktop.jpg" class="pic-desk">
     </div>
     <div class="perfume">P E R F U M E</div>
     <div class="gabrielle">
