--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
   <div class="container">
     <div class="product-preview">
       <img src="/product-preview-card-component-main/images/image-product-mobile.jpg" class="pic-mob">
-      <img src="/product-preview-card-component-main/images/image-product-desktop.jpg" class="pic-desk">
+      <img src="https://placeimg.com/640/480/any" class="pic-desk">
     </div>
     <div class="perfume">P E R F U M E</div>
     <div class="gabrielle">
