--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 <body>
   <div class="container">
     <div class="product-preview">
-      <img src="/my-first-project/main/images/image-product-mobile.jpg" class="pic-mob">
+      <img src="https://github.com/ahmedps8/my-first-project/tree/main/images/image-product-mobile.jpg" class="pic-mob">
       <img src="https://raw.githubusercontent.com/ahmedps8/my-first-project/main/images/image-product-desktop.jpg" class="pic-desk">
     </div>
     <div class="perfume">P E R F U M E</div>
