--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
     <div class="new-price"> $149.99
       <div class="old-price">$169.99</div>
       <div class="cart">
-        <img src="/product-preview-card-component-main/images/icon-cart.svg" class="icon"> 
+        <img src="https://raw.githubusercontent.com/ahmedps8/my-first-project/images/icon-cart.svg" class="icon"> 
       </div>
     </div>
   </div>
