--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
   <div class="container">
     <div class="product-preview">
       <img src="./images/image-product-mobile.jpg" class="pic-mob">
-      <img src="https://raw.githubusercontent.com/ahmedps8/my-first-project/main/images/image-product-desktop.jpg" class="pic-desk">
+      <img src="./images/image-product-desktop.jpg" class="pic-desk">
     </div>
     <div class="perfume">P E R F U M E</div>
     <div class="gabrielle">
